# rust-redis-sample

./: Cargo.toml
src/: main.rs  redis.rs
