[package]
name = "redis-test"
version = "0.1.0"
authors = ["Dmitrii Petrishin <dmitry.petrishin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.16.0"
tokio = { version = "0.2.10",  features = ["macros"] }
